tests/render_snapshots/snapshots/render_snapshots__result_pane__result_pane_jsonb_detail_mode.snap
---
source: tests/render_snapshots/result_pane.rs
expression: output
---
test_project | test_db | - | no dsn | localhost:5432/test                       
┌ [1] Explorer ────┐[Info] [Cols] [Idx] [FK] [RLS] [Trig] [DDL]                 
│> public.users    │┌ [2] Inspector ───────────────────────────────────────────┐
│  public.posts    ││Owner:   postgres                                         │
│  publi╭ JSONB Detail ── settings─────────────────────────────────────╮       │
│       │{                                                             │       │
│       │  "count": 5,                                                 │       │
│       │  "nested": {                                                 │       │
│       │    "enabled": true,                                          │       │
│       │    "roles": [                                                │       │
│       │      "admin",                                                │       │
│       │      "writer"                                                │───────┘
│       │    ]                                                         │───────┐
│       │  },                                                          │       │
│       │  "theme": "dark"                                             │ount...│
│       │}                                                             │       │
│       │                                                              │       │
│       │                                                              │       │
│       │✓ Valid JSON                                                  │       │
│       ╰ y:Copy  Enter/i:Insert  Esc:Close ───────────────────────────╯       │
│                  ││                                                          │
└──────────────────┘└──────────────────────────────────────────────────────────┘
y:Copy  Enter/i:Insert  hjkl/↑↓←→:Move  Home/End:Line  Esc:Close
